[package]
name = "p304m-prometheus-exporter"
edition = "2021"

[dependencies]
tapo = "0.8"
tokio = { version = "1.47.1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
prometheus-client = "0.24.0"
prometheus-client-derive-encode = "0.5.0"
axum = "0.8.6"
tower = "0.5.2"
clap = { version = "4.5.48", features = ["derive", "env"] }
clap_complete = "4.5.58"

# Disable default-tls as it wants openssl installed
reqwest = { version = "0.12.23", features = ["http2", "charset", "hickory-dns", "system-proxy"], default-features = false }

[dev-dependencies]
http-body-util = "0.1.3"
